# running-coach

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: foundations.md
migrations/: env.py
migrations/versions/: 20260719_0001_create_completed_activities.py
openspec/: config.yaml
openspec/changes/add-manual-activity-import/: proposal.md  tasks.md
openspec/changes/archive/2026-07-19-add-manual-activity-import/: design.md  tasks.md
openspec/changes/archive/2026-07-19-add-manual-activity-import/specs/manual-activity-import/: spec.md
openspec/specs/manual-activity-import/: spec.md
src/running_coach/: __init__.py  auth.py  config.py  database.py  domain.py  main.py  normalization.py  parsers.py  services.py
tests/: test_api.py  test_import_service.py  test_parsers.py
tests/fixtures/: cycling.tcx  evening_run.fit  malformed.gpx  running-rich.tcx  running-without-sensors.gpx
