[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "running-coach"
version = "0.1.0"
description = "Science-backed running activity analysis"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.16,<2",
    "fastapi>=0.115,<1",
    "fitdecode>=0.10,<1",
    "gpxpy>=1.6,<2",
    "httpx>=0.28,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "psycopg[binary]>=3.2,<4",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/running_coach"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]